--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click & Collect</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
+    />
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
 
@@ -18,17 +26,17 @@
           <nav class="flex justify-evenly gap-5 items-center">
             <a
               href="./index.html"
-              class="flex justify-center text-infoColor px-3 text-3xl"
+              class="flex justify-center text-infoColor hover:text-infoColor px-3 text-2xl"
               >Home</a
             >
             <a
               href="./about.html"
-              class="flex justify-center text-black px-3 text-3xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-2xl"
               >About</a
             >
             <a
               href="./contact.html"
-              class="flex justify-center text-black px-3 text-3xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-2xl"
               >Contact-us</a
             >
             <a href="#" class="flex justify-center px-3 fill-primary w-32">
@@ -47,7 +55,6 @@
           </nav>
         </div>
       </div>
-
       <!-- end header-->
 
       <!-- start gallery-->
@@ -64,7 +71,7 @@
         >
           <!--First item-->
           <div
-            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
             data-te-carousel-item
             data-te-carousel-active
           >
@@ -76,7 +83,7 @@
           </div>
           <!--Second item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
             data-te-carousel-item
           >
             <img
@@ -87,7 +94,7 @@
           </div>
           <!--Third item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
             data-te-carousel-item
           >
             <img
@@ -98,7 +105,7 @@
           </div>
           <!--Fourth item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
             data-te-carousel-item
           >
             <img
@@ -123,7 +130,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="h-6 w-6"
+              class="h-10 w-10 md:h-14 md:w-14"
             >
               <path
                 stroke-linecap="round"
@@ -132,15 +139,11 @@
               />
             </svg>
           </span>
-          <span
-            class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
-            >Previous</span
-          >
         </button>
 
         <!--Carousel controls - next item -->
         <button
-          class="absolute bottom-0 right-0 top-0 z-[1] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
+          class="absolute bottom-0 right-0 top-0 z-[10] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
           type="button"
           data-te-target="#carouselExampleControls"
           data-te-slide="next"
@@ -152,7 +155,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="h-6 w-6"
+              class="h-10 w-10 md:h-14 md:w-14"
             >
               <path
                 stroke-linecap="round"
@@ -161,73 +164,24 @@
               />
             </svg>
           </span>
-          <span
-            class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
-            >Next</span
-          >
         </button>
       </div>
 
       <!-- end gallery-->
 
       <!-- start buttons-->
-      <div class="categories">
-        <button
-          type="button"
-          data-te-ripple-init
-          data-te-ripple-color="light"
-          class="flex rounded bg-infoColor bg-opacity-30 px-6 pb-2 pt-2.5 text-3xl font-medium uppercase leading-normal text-black transition duration-150 ease-in-out hover:text-primary hover:shadow-sm m-auto my-7"
-        >
-          Click me
-        </button>
-      </div>
+      <div class="categories flex flex-row justify-center"></div>
 
       <!-- end buttons-->
 
       <!-- start products-->
-      <div class="grid-cols-1 sm:grid md:grid-cols-5">
-        <div
-          class="mx-3 mt-6 flex flex-col rounded-lg bg-white shadow-2xl sm:shrink-0 sm:grow sm:basis-0"
-        >
-          <img class="rounded-t-lg" src="../dist/images/tv.jpg" alt="" />
-          <div class="p-6">
-            <h5 class="mb-2 text-xl font-medium leading-tight text-neutral-800">
-              Card title
-            </h5>
-            <p class="mb-4 text-base text-neutral-600">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-          </div>
-          <div
-            class="mt-auto border-t-2 border-neutral-100 px-6 py-3 text-center"
-          >
-            <span>Add to cart</span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="1em"
-              viewBox="0 0 576 512"
-            >
-              <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-              <path
-                d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"
-              />
-            </svg>
-          </div>
-        </div>
+      <div class="products">
+        <!-- start product-->
       </div>
+      <!-- end product-->
+      <!-- end products-->
 
-      <!-- <div class="card">
-        <div class="info">
-          <img src="" alt="" />
-          <h2 class="title"></h2>
-          <p class="text"></p>
-          <span class="price"></span>
-        </div>
-        <div class="buy"></div>
-      </div> -->
-
+      <!-- scroll up button-->
       <button
         type="button"
         data-te-ripple-init
@@ -245,21 +199,25 @@
           />
         </svg>
       </button>
-      <!-- end products-->
 
       <!-- start footer-->
-      <div class="relative">
-        <span
-          class="flex h-24 shadow-lg w-full justify-center items-center text-primary text-3xl font-medium absolute bottom-0"
-          >&copy; Rana Gouda 2023
-        </span>
-      </div>
+      <footer
+        class="bg-white text-center lg:text-left w-full relative bottom-0"
+      >
+        <div class="p-4 text-center h-24 shadow-lg">
+          <span
+            class="flex justify-center items-center text-primary text-3xl font-medium"
+            >&copy; Rana Gouda 2023
+          </span>
+        </div>
+      </footer>
       <!-- end footer-->
     </div>
     <script src="script.js"></script>
-    <script
+    <!-- <script
       type="text/javascript"
       src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
-    ></script>
+    ></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
