--- a/src/about.html
+++ b/src/about.html
@@ -4,39 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click & Collect</title>
+
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body>
     <div class="font-body">
       <!-- start header-->
-      <div class="px-20 py-5 shadow-lg z-20">
+      <div class="px-16 shadow-lg z-20">
         <div class="flex justify-between align-middle h-16">
-          <a href="#" class="w-1/5"
+          <a href="#" class="w-1/5 p-2"
             ><img src="../dist/images/Logo.png" alt="" class="max-h-full"
           /></a>
           <nav class="flex justify-evenly gap-5 items-center">
             <a
               href="./index.html"
-              class="flex justify-center text-black hover:text-infoColor px-3 text-3xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Home</a
             >
             <a
               href="./about.html"
-              class="flex justify-center text-infoColor hover:text-infoColor px-3 text-3xl"
+              class="flex justify-center text-infoColor hover:text-infoColor px-3 text-xl"
               >About</a
             >
             <a
               href="./contact.html"
-              class="flex justify-center text-black hover:text-infoColorpx-3 text-3xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center px-3 fill-primary w-32">
+            <a href="#" class="flex justify-center px-3 fill-primary w-14">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                height="2.5em"
+                height="28px"
                 viewBox="0 0 576 512"
               >
-                <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <path
                   d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"
                 />
@@ -68,16 +68,15 @@
 
       <!-- start footer-->
       <footer
-        class="bg-white text-center lg:text-left w-full relative bottom-0"
+        class="bg-white flex items-center justify-center w-full relative bottom-0 shadow-md"
       >
-        <div class="p-4 text-center h-24 shadow-lg">
+        <div class="p-4 h-16">
           <span
-            class="flex justify-center items-center text-primary text-3xl font-medium"
+            class="text-center align-middle text-primary text-base uppercase font-medium"
             >&copy; Rana Gouda 2023
           </span>
         </div>
       </footer>
-
       <!-- end footer-->
     </div>
     <script src="script.js"></script>
