--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,11 @@
               class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center px-3 fill-primary w-14">
+            <a
+              id="cartIcon"
+              href="#"
+              class="flex justify-center px-3 fill-primary w-14"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="28px"
@@ -53,6 +57,10 @@
                   d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"
                 />
               </svg>
+              <div
+                id="cart"
+                class="top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+              ></div>
             </a>
             <!-- menu -->
           </nav>
@@ -60,7 +68,7 @@
       </div>
       <!-- end header-->
 
-      <!-- start gallery-->
+      <!-- start carousel-->
 
       <div
         id="carouselExampleControls"
@@ -170,11 +178,10 @@
         </button>
       </div>
 
-      <!-- end gallery-->
+      <!-- end carousel-->
 
       <!-- start buttons-->
       <div class="categories flex flex-row justify-center h-28"></div>
-
       <!-- end buttons-->
 
       <!-- start products-->
@@ -219,6 +226,7 @@
       <!-- end footer-->
     </div>
     <script src="script.js"></script>
+    <script src="cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
