--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@
               class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center px-3 fill-primary w-14">
+            <a href="#" class="flex justify-center p-4 fill-primary w-14">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="28px"
@@ -46,6 +46,25 @@
               >
                 <path
                   d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"
+                />
+              </svg>
+              <div class="cartCounter" id="cartCounter">0</div>
+              <div
+                id="cart"
+                class="top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+              ></div>
+            </a>
+            <a
+              href="./login.html"
+              class="flex justify-center p-4 fill-primary w-14"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="24px"
+                viewBox="0 0 448 512"
+              >
+                <path
+                  d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
                 />
               </svg>
             </a>
@@ -71,7 +90,7 @@
           <img
             src="../dist/images/Logo.png"
             alt=""
-            class="p-12 align-middle w-max block"
+            class="p-12 align-middle w-max block flex-shrink-0"
           />
         </div>
       </div>
@@ -90,6 +109,8 @@
       </footer>
       <!-- end footer-->
     </div>
+    <script src="script.js"></script>
+    <script src="cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
