--- a/src/about.html
+++ b/src/about.html
@@ -114,7 +114,7 @@
       <!-- end footer-->
     </div>
     <script src="cart.js"></script>
-    <script src="script.js"></script>
+    <script src="auth.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
