--- a/src/login.html
+++ b/src/login.html
@@ -89,7 +89,7 @@
             >
               Sign in
             </h1>
-            <form onsubmit="authUser()">
+            <form id="form">
               <!-- Email input -->
               <div class="relative mb-8">
                 <input
@@ -134,7 +134,8 @@
               <!-- Login button -->
               <div class="text-center">
                 <button
-                  type="button"
+                  id="submit"
+                  type="submit"
                   class="block p-4 font-bold text-xl cursor-pointer bg-primary text-white w-full uppercase leading-normal shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]"
                 >
                   Login
